--- a/stylesheet.CSS
+++ b/stylesheet.CSS
@@ -14,3 +14,54 @@
     color: blue;
     border: 2px dotted navy;
 }*/
+
+/*stylesheet for udemy #56 more DOM events*/
+
+    /* .box{
+      width: 200px;
+      height: 200px;
+      margin: 10px 0;
+      background: #eee;
+      text-align: center;
+      padding: 30px;
+    } */
+
+    /* udemy 6-57 building a pop-up */
+    button{
+        display: block;
+        margin: 20px auto;
+        background: crimson;
+        color: white;
+        border: 0px;
+        padding: 6px 10px;
+    }
+    .popup-wrapper{
+        background: rgba(0,0,0,0.5);
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+    .popup{
+        font-family: arial;
+        text-align: center;
+        width: 100%;
+        max-width: 300px;
+        margin: 10% auto;
+        padding: 20px;
+        background: white;
+        position: relative;
+    }
+    .popup a{
+        background: crimson;
+        color: white;
+        text-decoration: none;
+        padding: 6px 10px;
+    }
+    .popup-close{
+        position: absolute;
+        top: 5px;
+        right: 8px;
+        cursor: pointer;
+    }
